# transitions-reactflow

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml  test.yml
demo/: index.html  main.jsx  requirements.txt  server.py
demo/flask_app/: main.py
demo/react_app/: main.jsx  package-lock.json  package.json
tests/: __init__.py  test_extensions.py  test_graph.py  test_machine.py
transitions_reactflow/: README.md  __init__.py  __init__.pyi  diagrams_reactflow.pyi  graph.py  machine.py  machine.pyi
